# file-swarm

./: .gitignore  AGENTS.md  LICENSE  README.md  benchmark_report.md  benchmark_results.json  pyproject.toml  项目问题诊断报告.md
configs/: hard_constraints.example.yaml  interface_contract.example.yaml  model_slots.example.yaml  policy.example.yaml  routing.example.yaml
docs/: architecture.md  codex-lite-mode.md  large-task-glm-mimo-benchmark.md  large-task-rerun-2026-06-27.md  live-3d-web-benchmark.md  model-slot.md  security.md  skill-usage.md  swarm-vs-codex-comparison.md  worker-types.md  workflow.md
src/file_swarm/: __init__.py  agent_executor.py  cli.py  codex_contracts.py  contract_builder.py  dispatcher.py  lease_manager.py  model_router.py  model_slot.py  models.py  patch_apply.py  patch_guard.py  patch_merger.py  patch_normalizer.py  preflight_checker.py  rate_limiter.py  repair.py  repo_scanner.py  run_state.py  slot_registry.py  summary.py  task_planner.py  transcript_logger.py  validators.py
tests/: benchmark_nvidia_v2.py  test_apply_safety.py  test_cli.py  test_demo_e2e.py  test_dispatch_async.py  test_dispatch_task_loading.py  test_enhanced_agent_benchmark.py  test_lease_manager.py  test_mock_provider.py  test_model_slot.py  test_mouse_clicker_collab.py  test_multi_slot_parallel.py  test_patch_apply_and_normalizer.py  test_patch_guard.py  test_preflight_and_smoke.py  test_repair.py  test_run_auto_mock.py  test_secret_redaction.py  test_slot_registry.py  test_summary.py  test_task_planner_web.py  test_transcript_logger.py  test_validator_node.py
(+20 files in other folders)
